Updated spacing in `index.html`

--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-        <!-- Styles for `reveal` -->
+        <!-- Styles for `reveal`. -->
         <link rel="stylesheet" href="content/presentation/lib/reveal/css/reset.css">
         <link rel="stylesheet" href="content/presentation/lib/reveal/css/reveal.css">
         <link rel="stylesheet" href="content/presentation/lib/reveal/css/theme/simple.css" id="theme">
         <link rel="stylesheet" href="content/presentation/lib/reveal/lib/css/monokai.css">
+
+        <!-- Presentation styles. -->
         <link rel="stylesheet" href="content/presentation/css/presentation.css">
-        
+
         <title>Presentation</title>
-        
+
         <!-- <script src="lib/vue/vue.min.js"></script> -->
         <script src="content/presentation/lib/vue/vue.js"></script>
         <script src="content/presentation/lib/vuex/vuex.js"></script>
